test_data/typeerror/core-8065.py
if self.group_name is not None:
    ids = sorted(self.entities, key=lambda x: self.entities[x].name)